--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,19 +1,22 @@
 <div class="row">
   <div class="col-xl-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success m-2">New Recipe</button>
+    <hr>
   </div>
 </div>
 <div class="row">
-<div class="col xl-12">
-  <a href="#" class="list-group-item clearfix">
-    <div class="pull-left">
-      <h4 class="list-group-item-heading">Recipe Name</h4>
-      <p class="list-group-item-text">Description</p>
-    </div>
-    <span class="pull-right">
-      <img src="" alt="" class="img-responsive" style="max-height: 50px;">
-    </span>
-  </a>
-  <app-recipe-item></app-recipe-item>
+  <div class="col-xl-12">
+    <a href="#" class="list-group-item d-flex justify-content-between " *ngFor="let item of recipes">
+      <div>
+        <h4 class="list-group-item-heading">{{ item.name }}</h4>
+        <p class="list-group-item-text">{{ item.description }}</p>
+      </div>
+      <div>
+        <img [src]="item.imagePath" alt="{{ item.name }}" class="img-responsive" style="max-height: 70px;">
+      </div>
+    </a>
+
+    <app-recipe-item></app-recipe-item>
+  </div>
 </div>
-</div>
+
