--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,13 @@
   <div class="col-lg-12">
     <app-shopping-edit></app-shopping-edit>
     <hr>
-    <p>The List</p>
+    <ul class="list-group">
+      <a href="#" class="list-group-item"
+      style="cursor: pointer;"
+      *ngFor="let item of ingredient"
+      >
+      {{ item.name }} ({{ item.amount }})
+      </a>
+    </ul>
   </div>
 </div>
