--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,17 +6,11 @@
 </div>
 <div class="row">
   <div class="col-xl-12">
-    <a href="#" class="list-group-item d-flex justify-content-between " *ngFor="let item of recipes">
-      <div>
-        <h4 class="list-group-item-heading">{{ item.name }}</h4>
-        <p class="list-group-item-text">{{ item.description }}</p>
-      </div>
-      <div>
-        <img [src]="item.imagePath" alt="{{ item.name }}" class="img-responsive" style="max-height: 70px;">
-      </div>
-    </a>
 
-    <app-recipe-item></app-recipe-item>
+
+    <app-recipe-item
+    *ngFor="let recipeEl of recipes"
+    [recipe]="recipeEl"></app-recipe-item>
   </div>
 </div>
 
